# sentinel

./: .gitignore  README.md  categorias_validacoes_qualidade_dados.md  features.md  pyproject.toml
sentinel/: main.py
sentinel/config/: logging_config.py  spark_context.py
sentinel/data_quality/: expectations_validator.py  metrics_validator.py  validator.py
sentinel/exception/: ValidationError.py
sentinel/models/: __init__.py  base.py  column_mapping.py  config.py  destination_config.py  expectations.py  metrics.py  query_mapping.py  source_config.py
sentinel/utils/: string_utils.py  utils.py
tests/: conftest.py  test_config.py  test_data_validation.py  test_expectations.py  test_metrics_validator.py  test_spark.py  test_xpectations.py
tests/resources/: custom_validation.json  expectations.json  process.json
